@@ -1,3 +1,4 @@
+6/3/13 use Property.link/unlink instead of addObserver/removeObserver
 6/3/13 use Property.value instead of set() and get()
 6/3/13 ditch fort, convert back to Property
 5/31/13 migrate toFixed to dot.Util
